--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                 </div>
             </div>
             <a href="mailto:546331364@qq.com">联系我</a>
-            <a href="assets/liuyang.CV.pdf" download class="resume-btn">下载简历</a>
+            <a href="liuyang.CV.pdf" download class="resume-btn">下载简历</a>
         </nav>
     </header>
 
