--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="assets/liuyang.CV.pdf" download class="cv-download-btn">下载完整简历</a>
+            <a href="liuyang.CV.pdf" download class="cv-download-btn">下载完整简历</a>
         </div>
     </section>
 
