--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
                         <img src="https://i.postimg.cc/vZk68HzT/image.png" alt="China Daily Interview">
                     </div>
                     <div class="interview-card-content">
-                        <div class="interview-card-source">China Daily · 专访</div>
+                        <div class="interview-card-source">中国日报 China Daily · 专访</div>
                         <div class="interview-card-title">Microfilms spark young bonds across the Strait</div>
                         <div class="interview-card-quote">"I'm usually more reserved. But seeing their sincerity and dedication encourage me to take a bolder, more expressive approach in my own creative work."</div>
                         <div class="interview-card-author">— Liu Yang, Hubei University of Economics</div>
